# PropChain-contract

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  SECURITY.md  TYPESCRIPT_TYPE_GENERATION_GUIDE.md  audit-schedule.json  check_output.txt
.cargo/: config.toml
.github/: perf-baseline.json
.github/workflows/: ci.yml  documentation.yml  performance.yml  test-coverage.yml
contracts/compliance_registry/: Cargo.toml  lib.rs
contracts/identity/: lib.rs
contracts/lib/: Cargo.toml
contracts/monitoring/: Cargo.toml
contracts/monitoring/src/: lib.rs
contracts/tax-compliance/: Cargo.toml
docs/: ACCESS_CONTROL_AUDIT.md  API_GUIDE.md  API_PLAYGROUND.md  ERROR_CODES.md  LOAD_TESTING_GUIDE.md  LOAD_TEST_IMPLEMENTATION_SUMMARY.md  LOAD_TEST_MONITORING.md  LOAD_TEST_QUICK_START.md  SECURITY_AUDIT_GUIDE.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  contracts.md  monitoring.md  playground.html
indexer/: Cargo.toml
indexer/src/: api.rs  ingest.rs
proptest-regressions/: security_fuzzing_tests.txt
research/: trustless-work-submission.md
scripts/: load_test.ps1  load_test.sh  verify_doc_sync.sh
sdk/frontend/: COMPREHENSIVE_TYPES_GUIDE.md  README.md  (+3 more)
tests/: Cargo.toml  cross_contract_integration.rs  lib.rs  load_test_endurance_spike.rs  load_test_property_registration.rs  load_test_property_transfer.rs  load_test_scalability.rs  load_tests.rs  monitoring_tests.rs  performance_benchmarks.rs  security_access_control_tests.rs  security_audit_runner.rs  security_bridge_tests.rs  security_compliance_tests.rs  security_fuzzing_tests.rs  security_overflow_tests.rs  test_utils.rs
(+60 files in other folders)
