[package]
name = "propchain-monitoring"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "propchain_monitoring"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
propchain_traits = { package = "propchain-traits", path = "../traits", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain_traits/std",
]
ink-as-dependency = []
